// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking track events definitions \`Checkout Step Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"SUBMIT\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking track events definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking track events definitions \`Place Order Started\` return should match the snapshot 1`] = `
Array [
  Object {
    "tid": 10097,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
  Object {
    "tid": 188,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
]
`;

exports[`Omnitracking track events definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "tid": 16,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "tid": 35,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Sign-up Form Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"REGISTER\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking track events definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "dropDownListOptions",
    "dropDownListSelection",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "partnerDocuments",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderId",
    "orderVAT",
    "orderValue",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "dropDownListOptions",
    "dropDownListSelection",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "partnerDocuments",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "attributesList",
    "bookmarkId",
    "bookmarkItemList",
    "categoryList",
    "categoryName",
    "clientTimestamp",
    "colourList",
    "department",
    "designerList",
    "discount",
    "filterType",
    "filtersApplied",
    "fittingRoomName",
    "hasNewMessages",
    "integrationId",
    "interactionType",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "marketType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "scrollDepth",
    "searchQuery",
    "selectableFieldsList",
    "sizeList",
    "skuItemList",
    "tagList",
    "uuid",
    "variantId",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "orderDetails",
    "orderList",
    "orderSummary",
    "paymentStatus",
    "selectedOrderType",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "dropDownListOptions",
    "dropDownListSelection",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "partnerDocuments",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "categoryId",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recommendationSource",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "dropDownListOptions",
    "dropDownListSelection",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "partnerDocuments",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "applePayStatus",
    "categoryId",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "hasVto",
    "itemColourId",
    "lookId",
    "numberOfColours",
    "numberOfSizes",
    "numberOfSizesInStore",
    "rankType",
    "recommendationSource",
    "reviews",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking track events definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking track events definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "accessTier",
  "actionArea",
  "advertiserId",
  "categoryId",
  "categoryName",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "deliveryInformationDetails",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerId",
  "designerName",
  "dismiss",
  "errorMessage",
  "hasError",
  "isFixedMerchant",
  "itemColourId",
  "itemCoordinates",
  "itemQuantity",
  "itemSize",
  "loadItemCoordinate",
  "moduleContentID",
  "moduleContentName",
  "moduleId",
  "moduleLoadTime",
  "moduleState",
  "moduleType",
  "moduleWasInteracted",
  "moduleWasSeen",
  "numberOfColours",
  "orderCode",
  "orderCodeId",
  "orderSummary",
  "partnersSubscriptionList",
  "priceCurrency",
  "productCount",
  "productId",
  "productPackagingOptions",
  "promoCode",
  "promotionDetails",
  "provider",
  "recommendationsId",
  "recommendationsProductList",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "status",
  "storeConnections",
  "storeId",
  "targetId",
  "targetType",
  "tid",
  "totalStock",
  "totalStockInStore",
  "uniqueViewId",
  "unitFullPrice",
  "unitSalePrice",
  "val",
  "attributesList",
  "bookmarkId",
  "bookmarkItemList",
  "categoryList",
  "categoryName",
  "clientTimestamp",
  "colourList",
  "department",
  "designerList",
  "discount",
  "filterType",
  "filtersApplied",
  "fittingRoomName",
  "hasNewMessages",
  "integrationId",
  "interactionType",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "marketType",
  "merchantLocationId",
  "messageComponentsList",
  "messageId",
  "messageNumber",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "scrollDepth",
  "searchQuery",
  "selectableFieldsList",
  "sizeList",
  "skuItemList",
  "tagList",
  "uuid",
  "variantId",
]
`;
